--- a/app/src/main/res/drawable/description_bg.xml
+++ b/app/src/main/res/drawable/description_bg.xml
@@ -1,5 +1,9 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <solid android:color="@color/white" />
-    <corners android:radius="10dp"/>
-    <stroke android:width="2dp" android:color="@color/dark_peach" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#FFFFFF"/>
+    <corners android:radius="12dp"/>
+    <stroke android:width="2dp" android:color="@color/dark_peach"/>
+    <gradient
+        android:startColor="#FFFFFF"
+        android:endColor="#40FFDFEE"
+        android:angle="270"/>
 </shape>
